resources/less/virkailija-application.less
/* ... */
.application-handling__review-settings-header-text {
  margin-left: 10px;
  font-size: 14px;
  text-transform: uppercase;
}

.application-handling__review-settings-indicator-outer {
  position: absolute;
  border-left: 14px solid transparent;
  border-right: 14px solid transparent;
  border-bottom: 12px solid @review-separator-color;
  right: 23px;
  top: -12px;
}

.application-handling__review-settings-indicator-inner {
  position: absolute;
  border-left: 12px solid transparent;
  border-right: 12px solid transparent;
  border-bottom: 10px solid white;
  top: 2px;
  left: -12px;
}

.application-handling__review {
  color: @text-color;
  font-size: 14px;
  width: 436px;
  .application-handling-webkit-scrollbar-mixin;
  position: relative;
  visibility: visible;
  border-top: solid @review-separator-color 1px;
}

.application-handling__attachment-review-container {
  background-color: @very-light-gray;
  border-bottom: solid @review-separator-color 1px;
  border-left: 3px solid @link-color;
  //left: 25px;
  padding: 10px;
  position: absolute;
  //transform: translateX(-100%);
  min-width: 672px;
  right: 436px;
  animation-duration: 0.5s;
}

.application-handling__attachment-review-container-floating {
  left: unset;
  position: fixed;
  right: 509px;
}

.application-handling__attachment-review-header {
  display: flex;
  justify-content: space-between;
  margin-top: 20px;
  padding-bottom: 5px;
  border-bottom: solid @review-separator-color 1px;
}

.application-handling__eligibility-automatically-checked {
  margin-left: 10px;
  color: @opintopolku-green;
}

.application__attachment-review-row {
  display: flex;
  flex-direction: column;

  &:not(:last-child) {
    margin: 10px 0;
    padding-bottom: 10px;
    border-bottom: dashed @review-separator-color 1px;
  }
}

.application__attachment-review-info-row {
  display: flex;
  align-items: flex-start;
  margin-bottom: 10px;
}

.application__attachment-review-row-attachments {
  padding: 0px;
  margin: 0px;
  font-weight: lighter;
  list-style: none;
}

.application__attachment-review-row-label {
  flex-grow: 2;
  align-self: flex-start;
  font-weight: lighter;
  margin: 0 10px 0 0;
}

.application-handling__review-outer-container {
  position: relative;
  padding-top: 15px;
  background-color: @very-light-gray;
  padding-left: 15px;
  padding-right: 15px;
}
.application-handling__review-filters {
  padding-left: 55px;
  .unselectable;
  display: inline;
}

.application-handling__review-checkbox + label {
  font-weight: lighter;
}

.application-handling__attachment-review-toggle-container {
  position: relative;
  margin-bottom: 15px;
  padding-top: 8px;
 }

.application-handling__attachment-review-toggle-container-link {
  cursor: pointer;
  &:hover {
    text-decoration: underline;
  }
}

.application-handling__attachment-review-toggle {
  font-size: 14px;
  padding: 0 5px;
  margin-right: 10px;
  color: white;
  background-color: @link-color;
  border-radius: 2px;
  font-weight: lighter;
}

.application-handling__floating-application-review-placeholder {
  width: 779px;
  visibility: hidden;
}

.application-handling__review-area-settings-link {
  position: absolute;
  top: -75px;
  right: 25px;
}

.application-handling__review-area-settings-button {
  color: @gray;
  font-size: 32px;
  cursor: pointer;
}

.application__handling-heading {
  margin-bottom: 8px;
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-between;
}

.application-handling__navigation {
  margin-right: 100px;
  margin-top: 15px;
  .unselectable;
}

.application-handling__navigation-link {
  font-size: 15px;
  white-space: nowrap;
}

.application-handling__navigation-link-divider {
  margin: 0 10px;
  color: @disabled-font-gray;
}

.application-handling__review-area-main-heading-container {
  align-items: center;
  display: flex;
  flex-flow: row nowrap;
  margin-top: -7px;
  margin-bottom: 7px;
}

.application-handling__review-area-main-heading {
  display: inline-block;
  color: @text-color;
  margin-top: 0px;
  margin-bottom: 0px;
  font-size: 22px;
  .semibold;
}

.application-handling__review-area-main-heading-name-row {
  display: flex;
  align-items: center;
}

.application-handling__review-area-main-heading-application-oid-row {
  font-size: 14px;
}

.application-handling__review-area-main-heading-person-oid-row {
  display: flex;
  align-items: center;
  white-space: nowrap;
}

.application-handling__applicant-links {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  font-size: 14px;
}

.application-handling__review-area-main-heading-person-icon {
  font-size: 14px;
  vertical-align: bottom;
}

.application-handling__review-area-main-heading-person-oid {
  margin-left: 6px;
}

.application-handling__review-area-main-heading-applications-link {
}

.application-handling__hakukohde-wrapper {
  margin-bottom: 5px;
  display: flex;
  align-items: center;
}
.application-handling__hakukohde--selected {
  color: @gray-of-the-beast;
  border-left: 7px solid @pale-blue;
  padding-left: 15px;
  margin-left: -22px;
}
.application-handling__hakukohde--selectable {
  cursor: pointer;
}

.application__hakukohde-priority-number-readonly {
  font-size: 30px;
  margin: 0;
  padding-right: 10px;
}

.application-handling__review-area-hakukohde-heading {
  font-size: 14px;
  .semibold;
}

.application-handling__review-area-haku-heading {
  font-size: 16px;
  .light;
  font-style: italic;
}

.application-handling__review-area-koulutus-heading {
  font-size: 14px;
}

.application-handling__review-header {
  color: @text-color;
  padding-top: 12px;
  .semibold;
}

.application-handling__review-hakukohde-inputs {
}

.application-handling__review-state-container-processing-state {
  padding-bottom: 5px;
}

.application-handling__review-header--processing-state,
.application-handling__review-header--selection-state {
  font-weight: normal;
}
/* ... */

